authenticate with Bungie

--- a/Destiny2WeaponMods/Destiny2WeaponMods.csproj
+++ b/Destiny2WeaponMods/Destiny2WeaponMods.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>1eb4d86a-f7c9-4fef-bdf7-d3444fecb222</UserSecretsId>
   </PropertyGroup>
-
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
+    <PackageReference Include="Destiny2" Version="1.2.1"/>
   </ItemGroup>
-
 </Project>
