--- a/Destiny2WeaponMods/appsettings.json
+++ b/Destiny2WeaponMods/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppName": "Destiny2 Weapon Mods",
+  "AppVersion": "1.0",
+  "Bungie": {
+    "LoginCookieName": "Destiny2WeaopnModsLoginCookie",
+    "BaseUrl": "https://www.bungie.net/",
+    "AuthorizationEndpoint": "https://www.bungie.net/en/oauth/authorize",
+    "TokenEndpoint": "https://www.bungie.net/platform/app/oauth/token/"
+  }
 }
